--- a/setup.cfg
+++ b/setup.cfg
@@ -1,16 +1,34 @@
 
-
 [metadata]
 name = kojismokydingo
-version = 0.9.0
+version = attr: kojismokydingo.VERSION
 description = A collection of Koji command-line plugins
 author = Christopher O'Brien
 author_email = obriencj@gmail.com
 url = https://github.com/obriencj/koji-smoky-dingo
+
 license = GNU General Public License v3 (GPLv3)
+license_file = LICENSE
+
+long_description = file: README.md
+long_description_content_type = text/markdown
+
+platform = any
+
+project_urls =
+  Source = https://github.com/obriencj/koji-smoky-dingo
+  Bug Reports = https://github.com/obriencj/koji-smoky-dingo/issues
 
 classifiers =
+  Environment :: Console
   Intended Audience :: Developers
+  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
+  Programming Language :: Python :: 2.6
+  Programming Language :: Python :: 2.7
+  Programming Language :: Python :: 3.6
+  Programming Language :: Python :: 3.7
+  Programming Language :: Python :: 3.8
+  Topic :: Software Development :: Build Tools
 
 
 [options]
