--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,16 @@
 
 
+[metadata]
+license_file = LICENSE
+
+long_description = file: README.md
+long_description_content_type = text/markdown
+
+project_urls =
+  Source = https://github.com/obriencj/koji-smoky-dingo
+  Bug Reports = https://github.com/obriencj/koji-smoky-dingo/issues
+
+
 [tox:tox]
 envlist = py26,py27,py36,py37,flake8
 
