general cleanup of tooling

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,9 +9,14 @@ long_description_content_type = text/markdown
 project_urls =
   Source = https://github.com/obriencj/koji-smoky-dingo
   Bug Reports = https://github.com/obriencj/koji-smoky-dingo/issues
+  Documentation = https://obriencj.preoccupied.net/koji-smoky-dingo
 
 
 [tox:tox]
+# note, tox will sometimes lie about py26 being available and will try
+# to fake it with some other implementation. Use `make packaging-test`
+# to run testing under various CentOS versions -- one of which is
+# CentOS 6 which uses Python 2.6 by default.
 envlist = py26,py27,py36,py37,py38,flake8
 
 
@@ -19,37 +24,42 @@ envlist = py26,py27,py36,py37,py38,flake8
 commands =
   python -B -m nose
 
+sitepackages = false
+
 deps =
   koji
   mock
   nose
   six
 
-sitepackages = false
-
 
 [testenv:flake8]
 commands =
-  python -B -m flake8
+  python -B -m flake8 kojismokydingo/ koji_cli_plugins/
+
+sitepackages = false
 
 deps =
   flake8
 
 
+[aliases]
+test = nosetests
+
+
 [nosetests]
-where = tests
+#where = tests
 verbosity = 2
 all-modules = 1
 
 
 [flake8]
-
 # E303 complains about more than one blank lines between methods in a class
 # E741 ambiguous variable name
 # F401 ambiguous variable name
 
 ignore = E303,E741,F401
-exclude = setup.py,setup-meta.py,build,dist,tests,todo,.git,.tox
+exclude = setup*.py,build,dist,docs,tests,todo,tools,.*,__pycache__
 
 
 #
