--- a/setup.cfg
+++ b/setup.cfg
@@ -59,7 +59,7 @@ all-modules = 1
 # F401 ambiguous variable name
 
 ignore = E303,E741,F401
-exclude = setup*.py,build,dist,docs,tests,todo,tools,.*,__pycache__
+exclude = build,dist,docs,tests,todo,tools,.*,__pycache__
 
 
 #
