I like using lambda

--- a/setup.cfg
+++ b/setup.cfg
@@ -55,10 +55,11 @@ all-modules = 1
 
 [flake8]
 # E303 complains about more than one blank lines between methods in a class
+# E731 assigning a lambda to a variable
 # E741 ambiguous variable name
 # F401 ambiguous variable name
 
-ignore = E303,E741,F401
+ignore = E303,E731,E741,F401
 exclude = build,dist,docs,tests,todo,tools,.*,__pycache__
 
 
