--- a/setup.cfg
+++ b/setup.cfg
@@ -44,13 +44,19 @@ deps =
 
 
 [aliases]
+# nose acts enough like the original test command, but without the
+# extremely obnoxious deprecation warning. And why are they
+# deprecating the test command? So someone can remove approximately 40
+# lines of code from setuptools, despite the test command being the
+# most convenient and available way to get started with unit testing.
 test = nosetests
 
 
 [nosetests]
-#where = tests
+# where = tests
 verbosity = 2
 all-modules = 1
+no-byte-compile = 1
 
 
 [flake8]
