--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,7 @@ long_description_content_type = text/markdown
 project_urls =
   Source = https://github.com/obriencj/koji-smoky-dingo
   Bug Reports = https://github.com/obriencj/koji-smoky-dingo/issues
-  Documentation = https://obriencj.preoccupied.net/koji-smoky-dingo
+  Documentation = https://obriencj.github.io/koji-smoky-dingo
 
 
 [tox:tox]
