initial configuration for invoking coverage from tox

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,7 +17,7 @@ project_urls =
 # to fake it with some other implementation. Use `make packaging-test`
 # to run testing under various CentOS versions -- one of which is
 # CentOS 6 which uses Python 2.6 by default.
-envlist = py26,py27,py36,py37,py38,flake8
+envlist = py26,py27,py36,py37,py38,coverage,flake8
 
 
 [testenv]
@@ -27,13 +27,28 @@ commands =
 sitepackages = false
 
 deps =
-  koji
   mock
   nose
-  six
+
+
+[testenv:coverage]
+basepython = python2.7
+commands =
+  coverage erase
+  coverage run -m nose --verbosity=0 -q
+  coverage report
+  coverage html
+
+sitepackages = false
+
+deps =
+  coverage
+  mock
+  nose
 
 
 [testenv:flake8]
+basepython = python2.7
 commands =
   python -B -m flake8 kojismokydingo/ koji_cli_plugins/
 
@@ -57,6 +72,11 @@ test = nosetests
 verbosity = 2
 all-modules = 1
 no-byte-compile = 1
+
+
+[coverage:run]
+
+include = koji_cli_plugins/*,kojismokydingo/*
 
 
 [flake8]
