simplify docs to using a submodule

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,10 +17,13 @@ project_urls =
 # to fake it with some other implementation. Use `make packaging-test`
 # to run testing under various CentOS versions -- one of which is
 # CentOS 6 which uses Python 2.6 by default.
-envlist = py26,py27,py36,py37,py38,coverage,flake8
+envlist = flake8,py{27,36,37,38},coverage
 
 
 [testenv]
+setenv =
+  PYTHONWARNINGS = ignore
+
 commands =
   python -B -m nose
 
@@ -31,31 +34,60 @@ deps =
   nose
 
 
-[testenv:coverage]
-basepython = python2.7
-commands =
-  coverage erase
-  coverage run -m nose --verbosity=0 -q
-  coverage report
-  coverage html
+[testenv:py27]
+# generative section names are introduced in tox 3.15, but even Fedora
+# 31 only has tox 3.13, so it'll be a while before I can reliably use
+# that feature from system-installed tox
 
-sitepackages = false
+setenv =
+  COVERAGE_FILE = .coverage.{envname}
+
+commands =
+  coverage run -m nose
 
 deps =
   coverage
-  mock
-  nose
+  {[testenv]deps}
+
+
+[testenv:py37]
+# same as testenv:py27
+
+setenv =
+  COVERAGE_FILE = .coverage.{envname}
+
+commands =
+  coverage run -m nose
+
+deps =
+  coverage
+  {[testenv]deps}
+
+
+[testenv:coverage]
+# this is just here to combine the coverage output from the py27 and
+# py37 testenvs
+
+basepython = python
+
+commands =
+  coverage combine
+  coverage report
+  coverage html
+
+deps =
+  coverage
 
 
 [testenv:flake8]
 basepython = python2.7
+
 commands =
   python -B -m flake8 kojismokydingo/ koji_cli_plugins/
 
-sitepackages = false
-
 deps =
   flake8
+  {[testenv]deps}
 
 
 [aliases]
@@ -64,14 +96,23 @@ deps =
 # deprecating the test command? So someone can remove approximately 40
 # lines of code from setuptools, despite the test command being the
 # most convenient and available way to get started with unit testing.
+
+docs = build_sphinx
 test = nosetests
 
 
+[build_sphinx]
+
+build-dir = build/sphinx
+builder = dirhtml html
+source-dir = docs
+
+
 [nosetests]
-# where = tests
-verbosity = 2
+
 all-modules = 1
 no-byte-compile = 1
+verbosity = 2
 
 
 [coverage:run]
@@ -86,7 +127,17 @@ include = koji_cli_plugins/*,kojismokydingo/*
 # F401 ambiguous variable name
 
 ignore = E303,E731,E741,F401
-exclude = build,dist,docs,tests,todo,tools,.*,__pycache__
+exclude =
+  __pycache__
+  .*
+  build
+  dist
+  docs
+  gh-pages
+  htmlcov
+  tests
+  todo
+  tools
 
 
 #
