--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,5 @@
+# This file defines the general configuration for the kojismokydingo
+# wheel, tox, nose, flake8, coverage, and sphinx
 
 
 [metadata]
@@ -17,11 +19,13 @@ project_urls =
 # to fake it with some other implementation. Use `make packaging-test`
 # to run testing under various CentOS versions -- one of which is
 # CentOS 6 which uses Python 2.6 by default.
+
 envlist = flake8,py{27,36,37,38},coverage
 
 
 [testenv]
 setenv =
+  COVERAGE_FILE = .coverage.{envname}
   PYTHONWARNINGS = ignore
 
 commands =
@@ -35,12 +39,7 @@ deps =
 
 
 [testenv:py27]
-# generative section names are introduced in tox 3.15, but even Fedora
-# 31 only has tox 3.13, so it'll be a while before I can reliably use
-# that feature from system-installed tox
-
-setenv =
-  COVERAGE_FILE = .coverage.{envname}
+# piggyback coverage on top of the py27 unit tests.
 
 commands =
   coverage run -m nose
@@ -51,22 +50,25 @@ deps =
 
 
 [testenv:py37]
-# same as testenv:py27
-
-setenv =
-  COVERAGE_FILE = .coverage.{envname}
+# same as testenv:py27 -- generative section names are introduced in
+# tox 3.15, but even Fedora 31 only has tox 3.13, so it'll be a while
+# before I can reliably use that feature from system-installed tox to
+# define both of these in a single section
 
 commands =
-  coverage run -m nose
+  {[testenv:py27]commands}
 
 deps =
-  coverage
-  {[testenv]deps}
+  {[testenv:py27]deps}
 
 
 [testenv:coverage]
 # this is just here to combine the coverage output from the py27 and
 # py37 testenvs
+
+setenv =
+  COVERAGE_FILE = .coverage
+  PYTHONWARNINGS = ignore
 
 basepython = python
 
@@ -80,6 +82,9 @@ deps =
 
 
 [testenv:flake8]
+# we run this separately, and specifically using python 2.7 as the
+# basis, to ensure we're backwards compatible as expected
+
 basepython = python2.7
 
 commands =
@@ -117,7 +122,9 @@ verbosity = 2
 
 [coverage:run]
 
-include = koji_cli_plugins/*,kojismokydingo/*
+include =
+  koji_cli_plugins/*
+  kojismokydingo/*
 
 
 [flake8]
