setuptools integration for sphinx leaves a lot of holes

--- a/setup.cfg
+++ b/setup.cfg
@@ -112,6 +112,13 @@ build-dir = build/sphinx
 builder = dirhtml html
 source-dir = docs
 
+# why the heck isn't this something pulled from the values for the
+# actual package?
+project = kojismokydingo
+version = 0.9.1
+release = 0.9.1
+copyright = 2020, Christopher O'Brien
+
 
 [nosetests]
 
@@ -134,6 +141,7 @@ include =
 # F401 ambiguous variable name
 
 ignore = E303,E731,E741,F401
+
 exclude =
   __pycache__
   .*
