--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 # This file defines the general configuration for the kojismokydingo
-# wheel, tox, nose, flake8, coverage, and sphinx
+# wheel, and the tools tox, nose, flake8, coverage, and sphinx
 
 
 [metadata]
@@ -107,17 +107,17 @@ test = nosetests
 
 
 [build_sphinx]
+# some of the configuration for sphinx. The rest of it lives over in
+# docs/conf.py
+
+project = kojismokydingo
+version = 0.9.1  # eg. 1.0
+release = 0.9.1  # eg. 1.0.0
+copyright = 2020, Christopher O'Brien
 
 build-dir = build/sphinx
 builder = dirhtml html
 source-dir = docs
-
-# why the heck isn't this something pulled from the values for the
-# actual package?
-project = kojismokydingo
-version = 0.9.1
-release = 0.9.1
-copyright = 2020, Christopher O'Brien
 
 
 [nosetests]
