--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,5 @@
+# This file defines the general configuration for the kojismokydingo
+# wheel, and the tools tox, nose, flake8, coverage, and sphinx
 
 
 [metadata]
@@ -17,30 +19,80 @@ project_urls =
 # to fake it with some other implementation. Use `make packaging-test`
 # to run testing under various CentOS versions -- one of which is
 # CentOS 6 which uses Python 2.6 by default.
-envlist = py26,py27,py36,py37,py38,flake8
+
+envlist = flake8,py{27,36,37,38},coverage
 
 
 [testenv]
+setenv =
+  COVERAGE_FILE = .coverage.{envname}
+  PYTHONWARNINGS = ignore
+
 commands =
   python -B -m nose
 
 sitepackages = false
 
 deps =
-  koji
   mock
   nose
-  six
+
+
+[testenv:py27]
+# piggyback coverage on top of the py27 unit tests.
+
+commands =
+  coverage run -m nose
+
+deps =
+  coverage
+  {[testenv]deps}
+
+
+[testenv:py37]
+# same as testenv:py27 -- generative section names are introduced in
+# tox 3.15, but even Fedora 31 only has tox 3.13, so it'll be a while
+# before I can reliably use that feature from system-installed tox to
+# define both of these in a single section
+
+commands =
+  {[testenv:py27]commands}
+
+deps =
+  {[testenv:py27]deps}
+
+
+[testenv:coverage]
+# this is just here to combine the coverage output from the py27 and
+# py37 testenvs
+
+setenv =
+  COVERAGE_FILE = .coverage
+  PYTHONWARNINGS = ignore
+
+basepython = python
+
+commands =
+  coverage combine
+  coverage report
+  coverage html
+
+deps =
+  coverage
 
 
 [testenv:flake8]
+# we run this separately, and specifically using python 2.7 as the
+# basis, to ensure we're backwards compatible as expected
+
+basepython = python2.7
+
 commands =
   python -B -m flake8 kojismokydingo/ koji_cli_plugins/
 
-sitepackages = false
-
 deps =
   flake8
+  {[testenv]deps}
 
 
 [aliases]
@@ -49,14 +101,37 @@ deps =
 # deprecating the test command? So someone can remove approximately 40
 # lines of code from setuptools, despite the test command being the
 # most convenient and available way to get started with unit testing.
+
+docs = build_sphinx
 test = nosetests
 
 
+[build_sphinx]
+# some of the configuration for sphinx. The rest of it lives over in
+# docs/conf.py
+
+project = kojismokydingo
+version = 0.9.1  # eg. 1.0
+release = 0.9.1  # eg. 1.0.0
+copyright = 2020, Christopher O'Brien
+
+build-dir = build/sphinx
+builder = dirhtml html
+source-dir = docs
+
+
 [nosetests]
-# where = tests
-verbosity = 2
+
 all-modules = 1
 no-byte-compile = 1
+verbosity = 2
+
+
+[coverage:run]
+
+include =
+  koji_cli_plugins/*
+  kojismokydingo/*
 
 
 [flake8]
@@ -66,7 +141,18 @@ no-byte-compile = 1
 # F401 ambiguous variable name
 
 ignore = E303,E731,E741,F401
-exclude = build,dist,docs,tests,todo,tools,.*,__pycache__
+
+exclude =
+  __pycache__
+  .*
+  build
+  dist
+  docs
+  gh-pages
+  htmlcov
+  tests
+  todo
+  tools
 
 
 #
