--- a/setup.cfg
+++ b/setup.cfg
@@ -111,9 +111,13 @@ test = nosetests
 # docs/conf.py
 
 project = kojismokydingo
-version = 0.9.1  # eg. 1.0
-release = 0.9.1  # eg. 1.0.0
 copyright = 2020, Christopher O'Brien
+
+# eg. 1.0
+version = 0.9.1
+
+# eg. 1.0.0
+release = 0.9.1
 
 build-dir = build/sphinx
 builder = dirhtml html
