Enable filtering of archives by architecture

--- a/setup.cfg
+++ b/setup.cfg
@@ -144,8 +144,9 @@ include =
 # E731 assigning a lambda to a variable
 # E741 ambiguous variable name
 # F401 ambiguous variable name
+# W504 line break after binary operator
 
-ignore = E303,E731,E741,F401
+ignore = E303,E731,E741,F401,W504
 
 exclude =
   __pycache__
