--- a/setup.cfg
+++ b/setup.cfg
@@ -144,9 +144,10 @@ include =
 # E731 assigning a lambda to a variable
 # E741 ambiguous variable name
 # F401 ambiguous variable name
+# F812 list comprehension redefines variable (I reuse tmp names)
 # W504 line break after binary operator
 
-ignore = E303,E731,E741,F401,W504
+ignore = E303,E731,E741,F401,F812,W504
 
 exclude =
   __pycache__
