--- a/setup.cfg
+++ b/setup.cfg
@@ -39,9 +39,7 @@ deps =
   nose
 
 
-[testenv:py27]
-# piggyback coverage on top of the py27 unit tests.
-
+[covgen]
 commands =
   coverage run -m nose
 
@@ -50,17 +48,22 @@ deps =
   {[testenv]deps}
 
 
-[testenv:py37]
-# same as testenv:py27 -- generative section names are introduced in
-# tox 3.15, but even Fedora 31 only has tox 3.13, so it'll be a while
-# before I can reliably use that feature from system-installed tox to
-# define both of these in a single section
-
+[testenv:py27]
+# piggyback coverage on top of the py27 unit tests.
 commands =
-  {[testenv:py27]commands}
+  {[covgen]commands}
 
 deps =
-  {[testenv:py27]deps}
+  {[covgen]deps}
+
+
+[testenv:py37]
+# piggyback coverage on top of the py37 unit tests.
+commands =
+  {[covgen]commands}
+
+deps =
+  {[covgen]deps}
 
 
 [testenv:coverage]
@@ -137,6 +140,14 @@ verbosity = 2
 include =
   koji_cli_plugins/*
   kojismokydingo/*
+
+
+[coverage:report]
+
+exclude_lines =
+  pass
+  pragma: no cover
+  @abstract
 
 
 [flake8]
