enable some optional versions [ci skip]

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,7 +20,8 @@ project_urls =
 # to run testing under various CentOS versions -- one of which is
 # CentOS 6 which uses Python 2.6 by default.
 
-envlist = flake8,py{27,36,37,38},coverage
+envlist = flake8,py{26,27,36,37,38,39},coverage
+skip_missing_interpreters = true
 
 
 [testenv]
