--- a/setup.cfg
+++ b/setup.cfg
@@ -20,7 +20,8 @@ project_urls =
 # to run testing under various CentOS versions -- one of which is
 # CentOS 6 which uses Python 2.6 by default.
 
-envlist = flake8,py{27,36,37,38},coverage
+envlist = flake8,py{26,27,36,37,38},coverage
+skip_missing_interpreters = true
 
 
 [testenv]
@@ -39,9 +40,7 @@ deps =
   nose
 
 
-[testenv:py27]
-# piggyback coverage on top of the py27 unit tests.
-
+[covgen]
 commands =
   coverage run -m nose
 
@@ -50,17 +49,22 @@ deps =
   {[testenv]deps}
 
 
-[testenv:py37]
-# same as testenv:py27 -- generative section names are introduced in
-# tox 3.15, but even Fedora 31 only has tox 3.13, so it'll be a while
-# before I can reliably use that feature from system-installed tox to
-# define both of these in a single section
-
+[testenv:py27]
+# piggyback coverage on top of the py27 unit tests.
 commands =
-  {[testenv:py27]commands}
+  {[covgen]commands}
 
 deps =
-  {[testenv:py27]deps}
+  {[covgen]deps}
+
+
+[testenv:py37]
+# piggyback coverage on top of the py37 unit tests.
+commands =
+  {[covgen]commands}
+
+deps =
+  {[covgen]deps}
 
 
 [testenv:coverage]
@@ -139,14 +143,23 @@ include =
   kojismokydingo/*
 
 
+[coverage:report]
+
+exclude_lines =
+  pass
+  pragma: no cover
+  @abstract
+
+
 [flake8]
 # E303 complains about more than one blank lines between methods in a class
 # E731 assigning a lambda to a variable
 # E741 ambiguous variable name
 # F401 ambiguous variable name
+# F812 list comprehension redefines variable (I reuse tmp names)
 # W504 line break after binary operator
 
-ignore = E303,E731,E741,F401,W504
+ignore = E303,E731,E741,F401,F812,W504
 
 exclude =
   __pycache__
@@ -156,6 +169,7 @@ exclude =
   docs
   gh-pages
   htmlcov
+  setup.py
   tests
   todo
   tools
