--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ python:
   - "3.6"
   - "3.7"
   - "3.8"
+  - "3.9"
 
 
 # Tell pip and others to shut up about Python 2.7 deprecation
@@ -25,6 +26,7 @@ env:
 cache: pip
 
 install:
+  - apt install rust
   - pip install -I coveralls docutils flake8 koji nose six
 
 
