--- a/setup.cfg
+++ b/setup.cfg
@@ -14,6 +14,35 @@ project_urls =
   Documentation = https://obriencj.github.io/koji-smoky-dingo
 
 
+[build_sphinx]
+# some of the configuration for sphinx. The rest of it lives over in
+# docs/conf.py
+
+# eg. 1.0
+version = 0.9.8
+
+# eg. 1.0.0
+release = 0.9.8
+
+project = kojismokydingo
+copyright = 2020, Christopher O'Brien
+
+build-dir = build/sphinx
+builder = dirhtml html
+source-dir = docs
+
+
+[aliases]
+# nose acts enough like the original test command, but without the
+# extremely obnoxious deprecation warning. And why are they
+# deprecating the test command? So someone can remove approximately 40
+# lines of code from setuptools, despite the test command being the
+# most convenient and available way to get started with unit testing.
+
+docs = build_sphinx
+test = nosetests
+
+
 [tox:tox]
 # note, tox will sometimes lie about py26 being available and will try
 # to fake it with some other implementation. Use `make packaging-test`
@@ -67,6 +96,13 @@ deps =
   {[covgen]deps}
 
 
+[testenv:py{26,39}]
+# argparse for these versions has different help output which screws
+# with the help tests
+commands =
+  python -B -m nose -e 'test_command_help' -e 'test_standalone_help'
+
+
 [testenv:coverage]
 # this is just here to combine the coverage output from the py27 and
 # py37 testenvs
@@ -98,35 +134,6 @@ commands =
 deps =
   flake8
   {[testenv]deps}
-
-
-[aliases]
-# nose acts enough like the original test command, but without the
-# extremely obnoxious deprecation warning. And why are they
-# deprecating the test command? So someone can remove approximately 40
-# lines of code from setuptools, despite the test command being the
-# most convenient and available way to get started with unit testing.
-
-docs = build_sphinx
-test = nosetests
-
-
-[build_sphinx]
-# some of the configuration for sphinx. The rest of it lives over in
-# docs/conf.py
-
-project = kojismokydingo
-copyright = 2020, Christopher O'Brien
-
-# eg. 1.0
-version = 0.9.8
-
-# eg. 1.0.0
-release = 0.9.8
-
-build-dir = build/sphinx
-builder = dirhtml html
-source-dir = docs
 
 
 [nosetests]
