--- a/setup.cfg
+++ b/setup.cfg
@@ -22,7 +22,7 @@ version = 1.0
 release = 1.0.0
 
 project = kojismokydingo
-copyright = 2020, Christopher O'Brien
+copyright = 2020-2021, Christopher O'Brien
 
 build-dir = build/sphinx
 builder = dirhtml html
