--- a/setup.cfg
+++ b/setup.cfg
@@ -18,14 +18,11 @@ project_urls =
 # some of the configuration for sphinx. The rest of it lives over in
 # docs/conf.py
 
-# eg. 1.0
-version = 0.9.8
-
-# eg. 1.0.0
-release = 0.9.8
+version = 1.0
+release = 1.0.0
 
 project = kojismokydingo
-copyright = 2020, Christopher O'Brien
+copyright = 2020-2021, Christopher O'Brien
 
 build-dir = build/sphinx
 builder = dirhtml html
