--- a/setup.cfg
+++ b/setup.cfg
@@ -18,8 +18,8 @@ project_urls =
 # some of the configuration for sphinx. The rest of it lives over in
 # docs/conf.py
 
-version = 1.0
-release = 1.0.0
+version = 2.0
+release = 2.0.0
 
 project = kojismokydingo
 copyright = 2020-2021, Christopher O'Brien
@@ -41,12 +41,7 @@ test = nosetests
 
 
 [tox:tox]
-# note, tox will sometimes lie about py26 being available and will try
-# to fake it with some other implementation. Use `make packaging-test`
-# to run testing under various CentOS versions -- one of which is
-# CentOS 6 which uses Python 2.6 by default.
-
-envlist = flake8,py{26,27,36,37,38,39},coverage
+envlist = flake8,py{36,37,38,39},coverage
 skip_missing_interpreters = true
 
 
@@ -75,15 +70,6 @@ deps =
   {[testenv]deps}
 
 
-[testenv:py27]
-# piggyback coverage on top of the py27 unit tests.
-commands =
-  {[covgen]commands}
-
-deps =
-  {[covgen]deps}
-
-
 [testenv:py37]
 # piggyback coverage on top of the py37 unit tests.
 commands =
@@ -93,7 +79,7 @@ deps =
   {[covgen]deps}
 
 
-[testenv:py{26,39}]
+[testenv:py39]
 # argparse for these versions has different help output which screws
 # with the help tests
 commands =
@@ -101,8 +87,7 @@ commands =
 
 
 [testenv:coverage]
-# this is just here to combine the coverage output from the py27 and
-# py37 testenvs
+# this is just here to combine the coverage output
 
 setenv =
   COVERAGE_FILE = .coverage
@@ -123,7 +108,7 @@ deps =
 # we run this separately, and specifically using python 2.7 as the
 # basis, to ensure we're backwards compatible as expected
 
-basepython = python2.7
+basepython = python3.8
 
 commands =
   python -B -m flake8 kojismokydingo/ koji_cli_plugins/
