--- a/.travis.yml
+++ b/.travis.yml
@@ -8,13 +8,13 @@ dist: xenial
 language: python
 
 python:
-  - "2.7"
   - "3.6"
   - "3.7"
   - "3.8"
+  - "3.9"
 
 
-# Tell pip and others to shut up about Python 2.7 deprecation
+# Tell pip and others to shut up
 
 env:
   - PYTHONWARNINGS=ignore CRYPTOGRAPHY_DONT_BUILD_RUST=1
@@ -27,7 +27,7 @@ cache: pip
 install:
   - pip install -I -U pip
   - pip install -I cryptography
-  - pip install -I coveralls docutils flake8 koji nose six
+  - pip install -I coveralls docutils flake8 koji nose
 
 
 # What we'll run to actually do the testing
