--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ script:
   - tox
 
 after_success:
-  - coveralls
+  - if [ "$TRAVIS_PYTHON_VERSION" = "3.8" ] ; then coveralls ; fi
 
 
 # The end.
