--- a/setup.cfg
+++ b/setup.cfg
@@ -41,7 +41,7 @@ test = nosetests
 
 
 [tox:tox]
-envlist = flake8,py{36,37,38,39},coverage
+envlist = py{36,37,38,39},coverage
 skip_missing_interpreters = true
 
 
@@ -51,39 +51,27 @@ setenv =
   PYTHONWARNINGS = ignore
 
 commands =
-  python -B -m nose
+  python -B -m flake8 kojismokydingo/ koji_cli_plugins/
+  coverage run -m nose
 
 sitepackages = false
 
 deps =
+  coverage
   docutils
+  flake8
+  koji
   mock
   nose
 
-
-[covgen]
-commands =
-  coverage run -m nose
-
-deps =
-  coverage
-  {[testenv]deps}
-
-
-[testenv:py37]
-# piggyback coverage on top of the py37 unit tests.
-commands =
-  {[covgen]commands}
-
-deps =
-  {[covgen]deps}
+download = true
 
 
 [testenv:py39]
 # argparse for these versions has different help output which screws
 # with the help tests
 commands =
-  python -B -m nose -e 'test_command_help' -e 'test_standalone_help'
+  coverage run -m nose -e 'test_command_help' -e 'test_standalone_help'
 
 
 [testenv:coverage]
@@ -99,23 +87,6 @@ commands =
   coverage combine
   coverage report
   coverage html
-
-deps =
-  coverage
-
-
-[testenv:flake8]
-# we run this separately, and specifically using python 2.7 as the
-# basis, to ensure we're backwards compatible as expected
-
-basepython = python3.8
-
-commands =
-  python -B -m flake8 kojismokydingo/ koji_cli_plugins/
-
-deps =
-  flake8
-  {[testenv]deps}
 
 
 [nosetests]
