still trying to get tox-travis to launch py36,py37 without exploding

--- a/setup.cfg
+++ b/setup.cfg
@@ -40,8 +40,16 @@ docs = build_sphinx
 test = nosetests
 
 
+[travis]
+python =
+  3.6: py36
+  3.7: py37
+  3.8: py38
+  3.9: py39, flake8
+
+
 [tox:tox]
-envlist = py{36,37,38,39},coverage
+envlist = flake8,py{36,37,38,39},coverage
 skip_missing_interpreters = true
 
 
@@ -51,7 +59,6 @@ setenv =
   PYTHONWARNINGS = ignore
 
 commands =
-  python -B -m flake8 kojismokydingo/ koji_cli_plugins/
   coverage run -m nose
 
 sitepackages = false
@@ -59,7 +66,6 @@ sitepackages = false
 deps =
   coverage
   docutils
-  flake8
   koji
   mock
   nose
@@ -68,10 +74,20 @@ download = true
 
 
 [testenv:py39]
-# argparse for these versions has different help output which screws
-# with the help tests
+# argparse for this version has different help output which screws
+# with the docs tests
+
 commands =
   coverage run -m nose -e 'test_command_help' -e 'test_standalone_help'
+
+
+[testenv:flake8]
+commands =
+  python -B -m flake8 kojismokydingo/ koji_cli_plugins/
+
+deps =
+  flake8
+  koji
 
 
 [testenv:coverage]
