--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ install:
   - pip install -I cryptography koji
 
 script:
-  - tox
+  - python -m tox
 
 after_success:
   - if [ "$TRAVIS_PYTHON_VERSION" = "3.8" ] ; then coveralls ; fi
