--- a/setup.cfg
+++ b/setup.cfg
@@ -40,14 +40,6 @@ docs = build_sphinx
 test = nosetests
 
 
-[travis]
-python =
-  3.6: py36
-  3.7: py37
-  3.8: py38
-  3.9: py39, flake8
-
-
 [tox:tox]
 envlist = flake8,py{36,37,38,39},coverage
 skip_missing_interpreters = true
@@ -96,6 +88,7 @@ deps =
 setenv =
   COVERAGE_FILE = .coverage
   PYTHONWARNINGS = ignore
+  CRYPTOGRAPHY_DONT_BUILD_RUST = 1
 
 basepython = python
 
