I spend more time fighting with travis than actually writing code

--- a/setup.cfg
+++ b/setup.cfg
@@ -48,7 +48,6 @@ skip_missing_interpreters = true
 [testenv]
 setenv =
   COVERAGE_FILE = .coverage.{envname}
-  PYTHONWARNINGS = ignore
 
 commands =
   coverage run -m nose
@@ -58,9 +57,10 @@ sitepackages = false
 deps =
   coverage
   docutils
-  koji
   mock
   nose
+
+download = true
 
 
 [testenv:py39]
