dropping python 2 support (#79)
Moving towards version 2.0 of koji-smoky-dingo means dropping Python 2 (and RHEL 6/7) support.
Closes #75 

* Drops dependency on `six`
* Switches to using dict comprehensions
* Switches to using bare `super()`
* Removes `print_function` imports
* Removes old_python and python2 options from spec
* `datetime.timezone` no longer optional
* `Sieve.__init__` can now be used to supply keyword options; removed the `receive_options` and [`set_options`] methods

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,8 +18,8 @@ project_urls =
 # some of the configuration for sphinx. The rest of it lives over in
 # docs/conf.py
 
-version = 1.0
-release = 1.0.0
+version = 2.0
+release = 2.0.0
 
 project = kojismokydingo
 copyright = 2020-2021, Christopher O'Brien
@@ -41,72 +41,50 @@ test = nosetests
 
 
 [tox:tox]
-# note, tox will sometimes lie about py26 being available and will try
-# to fake it with some other implementation. Use `make packaging-test`
-# to run testing under various CentOS versions -- one of which is
-# CentOS 6 which uses Python 2.6 by default.
-
-envlist = flake8,py{26,27,36,37,38,39},coverage
+envlist = flake8,py{36,37,38,39},coverage
 skip_missing_interpreters = true
 
 
 [testenv]
 setenv =
   COVERAGE_FILE = .coverage.{envname}
-  PYTHONWARNINGS = ignore
 
 commands =
-  python -B -m nose
+  coverage run -m nose
 
 sitepackages = false
 
 deps =
+  coverage
   docutils
   mock
   nose
 
+download = true
 
-[covgen]
+
+[testenv:py39]
+# argparse for this version has different help output which screws
+# with the docs tests
+
 commands =
-  coverage run -m nose
+  coverage run -m nose -e 'test_command_help' -e 'test_standalone_help'
+
+
+[testenv:flake8]
+commands =
+  python -B -m flake8 kojismokydingo/ koji_cli_plugins/
 
 deps =
-  coverage
-  {[testenv]deps}
-
-
-[testenv:py27]
-# piggyback coverage on top of the py27 unit tests.
-commands =
-  {[covgen]commands}
-
-deps =
-  {[covgen]deps}
-
-
-[testenv:py37]
-# piggyback coverage on top of the py37 unit tests.
-commands =
-  {[covgen]commands}
-
-deps =
-  {[covgen]deps}
-
-
-[testenv:py{26,39}]
-# argparse for these versions has different help output which screws
-# with the help tests
-commands =
-  python -B -m nose -e 'test_command_help' -e 'test_standalone_help'
+  flake8
+  koji
 
 
 [testenv:coverage]
-# this is just here to combine the coverage output from the py27 and
-# py37 testenvs
+# this is just here to combine the coverage output
 
 setenv =
   COVERAGE_FILE = .coverage
-  PYTHONWARNINGS = ignore
 
 basepython = python
 
@@ -114,23 +92,6 @@ commands =
   coverage combine
   coverage report
   coverage html
-
-deps =
-  coverage
-
-
-[testenv:flake8]
-# we run this separately, and specifically using python 2.7 as the
-# basis, to ensure we're backwards compatible as expected
-
-basepython = python2.7
-
-commands =
-  python -B -m flake8 kojismokydingo/ koji_cli_plugins/
-
-deps =
-  flake8
-  {[testenv]deps}
 
 
 [nosetests]
