--- a/.travis.yml
+++ b/.travis.yml
@@ -4,40 +4,28 @@ os: linux
 
 dist: xenial
 
-
 language: python
 
 python:
-  - "2.7"
   - "3.6"
   - "3.7"
   - "3.8"
-
-
-# Tell pip and others to shut up about Python 2.7 deprecation
+  - "3.9"
 
 env:
-  - PYTHONWARNINGS=ignore CRYPTOGRAPHY_DONT_BUILD_RUST=1
-
-
-# How we'll be setting up the environment for use
+  global:
+    - CRYPTOGRAPHY_DONT_BUILD_RUST=1
 
 cache: pip
 
 install:
-  - pip install -I -U pip
-  - pip install -I cryptography
-  - pip install -I coveralls docutils flake8 koji nose six
-
-
-# What we'll run to actually do the testing
+  - pip install coveralls tox tox-travis
 
 script:
-  - flake8 kojismokydingo/ koji_cli_plugins/
-  - coverage run -m nose
+  - tox
 
 after_success:
-  - coveralls
+  - if [ "$TRAVIS_PYTHON_VERSION" = "3.8" ] ; then coveralls ; fi
 
 
 # The end.
