--- a/setup.cfg
+++ b/setup.cfg
@@ -9,11 +9,15 @@ description =  A collection of Koji client plugins and utils
 author = Christopher O'Brien
 author_email = obriencj@gmail.com
 
-licsense = GNU General Public License v3 (GPLv3)
+license = GNU General Public License v3 (GPLv3)
 license_file = LICENSE
 
 long_description = file: README.md
 long_description_content_type = text/markdown
+
+home_page = https://github.com/obriencj/koji-smoky-dingo
+
+platform = any
 
 project_urls =
   Source = https://github.com/obriencj/koji-smoky-dingo
