types. so many types

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,6 +24,29 @@ project_urls =
   Bug Reports = https://github.com/obriencj/koji-smoky-dingo/issues
   Documentation = https://obriencj.github.io/koji-smoky-dingo
 
+classifiers =
+  Environment :: Console
+  Intended Audience :: Developers
+  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
+  Programming Language :: Python :: 3
+  Programming Language :: Python :: 3.6
+  Programming Language :: Python :: 3.7
+  Programming Language :: Python :: 3.8
+  Programming Language :: Python :: 3.9
+  Topic :: Software Development :: Build Tools
+
+
+[aliases]
+# nose acts enough like the original test command, but without the
+# extremely obnoxious deprecation warning. And why are they
+# deprecating the test command? So someone can remove approximately 40
+# lines of code from setuptools, despite the test command being the
+# most convenient and available way to get started with unit testing.
+
+docs = build_sphinx
+test = nosetests
+types = mypy
+
 
 [build_sphinx]
 # some of the configuration for sphinx. The rest of it lives over in
@@ -38,17 +61,6 @@ copyright = 2020-2021, Christopher O'Brien
 build-dir = build/sphinx
 builder = dirhtml html
 source-dir = docs
-
-
-[aliases]
-# nose acts enough like the original test command, but without the
-# extremely obnoxious deprecation warning. And why are they
-# deprecating the test command? So someone can remove approximately 40
-# lines of code from setuptools, despite the test command being the
-# most convenient and available way to get started with unit testing.
-
-docs = build_sphinx
-test = nosetests
 
 
 [tox:tox]
@@ -83,12 +95,27 @@ commands =
 
 
 [testenv:flake8]
+
+basepython = python
+
 commands =
   python -B -m flake8 kojismokydingo/ koji_cli_plugins/
 
 deps =
   flake8
   koji
+
+
+[testenv:mypy]
+
+basepython = python
+
+commands =
+  python -B -m mypy kojismokydingo
+
+deps =
+  mypy
+  typing_extensions
 
 
 [testenv:coverage]
@@ -149,6 +176,11 @@ exclude =
   tests
   todo
   tools
+
+
+[mypy]
+no_site_packages = True
+ignore_missing_imports = True
 
 
 #
