--- a/setup.cfg
+++ b/setup.cfg
@@ -70,6 +70,7 @@ skip_missing_interpreters = true
 
 [testenv]
 setenv =
+  KSD_MERGE_PYI = 0
   COVERAGE_FILE = .coverage.{envname}
 
 commands =
@@ -89,6 +90,10 @@ download = true
 [testenv:py39]
 # argparse for this version has different help output which screws
 # with the docs tests
+
+setenv =
+  KSD_MERGE_PYI = 1
+  COVERAGE_FILE = .coverage.{envname}
 
 commands =
   coverage run -m nose -e 'test_command_help' -e 'test_standalone_help'
