enable flake8 for stubs

--- a/setup.cfg
+++ b/setup.cfg
@@ -150,10 +150,14 @@ include =
   koji_cli_plugins/*
   kojismokydingo/*
 
+omit =
+  *.pyi
+
 
 [coverage:report]
 
 exclude_lines =
+  \.\.\.
   pass
   pragma: no cover
   @abstract
@@ -168,6 +172,10 @@ exclude_lines =
 # W504 line break after binary operator
 
 ignore = E303,E731,E741,F401,F812,W504
+
+filename =
+  *.py
+  *.pyi
 
 exclude =
   __pycache__
