even more types

--- a/setup.cfg
+++ b/setup.cfg
@@ -120,6 +120,7 @@ commands =
 
 deps =
   mypy
+  types-pkg_resources
   typing_extensions
 
 
@@ -192,7 +193,7 @@ exclude =
 
 
 [mypy]
-no_site_packages = True
+no_site_packages = False
 ignore_missing_imports = True
 strict_optional = False
 
