run mypy by default

--- a/setup.cfg
+++ b/setup.cfg
@@ -64,7 +64,7 @@ source-dir = docs
 
 
 [tox:tox]
-envlist = flake8,py{36,37,38,39},coverage
+envlist = flake8,mypy,py{36,37,38,39},coverage
 skip_missing_interpreters = true
 
 
