Typing annotations and type definitions for koji dict types (#97)
* add type definitions
* typing annotations for API
* koji typing stub
* docs update
* use typing_extensions for python < 3.7
* update doc subpackage
* work with older TypedDict from typing_extensions
* mock isn't needed as a separate package anylonger
* run mypy by default

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,6 +24,29 @@ project_urls =
   Bug Reports = https://github.com/obriencj/koji-smoky-dingo/issues
   Documentation = https://obriencj.github.io/koji-smoky-dingo
 
+classifiers =
+  Environment :: Console
+  Intended Audience :: Developers
+  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
+  Programming Language :: Python :: 3
+  Programming Language :: Python :: 3.6
+  Programming Language :: Python :: 3.7
+  Programming Language :: Python :: 3.8
+  Programming Language :: Python :: 3.9
+  Topic :: Software Development :: Build Tools
+
+
+[aliases]
+# nose acts enough like the original test command, but without the
+# extremely obnoxious deprecation warning. And why are they
+# deprecating the test command? So someone can remove approximately 40
+# lines of code from setuptools, despite the test command being the
+# most convenient and available way to get started with unit testing.
+
+docs = build_sphinx
+test = nosetests
+types = mypy
+
 
 [build_sphinx]
 # some of the configuration for sphinx. The rest of it lives over in
@@ -40,24 +63,14 @@ builder = dirhtml html
 source-dir = docs
 
 
-[aliases]
-# nose acts enough like the original test command, but without the
-# extremely obnoxious deprecation warning. And why are they
-# deprecating the test command? So someone can remove approximately 40
-# lines of code from setuptools, despite the test command being the
-# most convenient and available way to get started with unit testing.
-
-docs = build_sphinx
-test = nosetests
-
-
 [tox:tox]
-envlist = flake8,py{36,37,38,39},coverage
+envlist = flake8,mypy,py{36,37,38,39},coverage
 skip_missing_interpreters = true
 
 
 [testenv]
 setenv =
+  KSD_MERGE_PYI = 0
   COVERAGE_FILE = .coverage.{envname}
 
 commands =
@@ -78,17 +91,37 @@ download = true
 # argparse for this version has different help output which screws
 # with the docs tests
 
+setenv =
+  KSD_MERGE_PYI = 1
+  COVERAGE_FILE = .coverage.{envname}
+
 commands =
   coverage run -m nose -e 'test_command_help' -e 'test_standalone_help'
 
 
 [testenv:flake8]
+
+basepython = python
+
 commands =
   python -B -m flake8 kojismokydingo/ koji_cli_plugins/
 
 deps =
   flake8
   koji
+
+
+[testenv:mypy]
+
+basepython = python
+
+commands =
+  python -B -m mypy kojismokydingo
+
+deps =
+  mypy
+  types-pkg_resources
+  typing_extensions
 
 
 [testenv:coverage]
@@ -118,10 +151,14 @@ include =
   koji_cli_plugins/*
   kojismokydingo/*
 
+omit =
+  *.pyi
+
 
 [coverage:report]
 
 exclude_lines =
+  \.\.\.
   pass
   pragma: no cover
   @abstract
@@ -137,6 +174,10 @@ exclude_lines =
 
 ignore = E303,E731,E741,F401,F812,W504
 
+filename =
+  *.py
+  *.pyi
+
 exclude =
   __pycache__
   .*
@@ -149,6 +190,13 @@ exclude =
   tests
   todo
   tools
+
+
+[mypy]
+no_site_packages = False
+ignore_missing_imports = True
+strict_optional = False
+mypy_path = tools/stubs/
 
 
 #
