--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,7 @@
 
 [metadata]
 name = kojismokydingo
+version = 2.0.0
 description =  A collection of Koji client plugins and utils
 
 author = Christopher O'Brien
