--- a/setup.cfg
+++ b/setup.cfg
@@ -196,7 +196,7 @@ exclude =
 no_site_packages = False
 ignore_missing_imports = True
 strict_optional = False
-mypy_path = tools/stubs/
+mypy_path = stubs/
 
 
 #
