use bandit for some security-ish scanning

--- a/setup.cfg
+++ b/setup.cfg
@@ -64,7 +64,7 @@ source-dir = docs
 
 
 [tox:tox]
-envlist = flake8,mypy,py{36,37,38,39},coverage
+envlist = flake8,mypy,py{36,37,38,39},coverage,bandit
 skip_missing_interpreters = true
 
 
@@ -85,6 +85,17 @@ deps =
   nose
 
 download = true
+
+
+[testenv:bandit]
+
+basepython = python
+
+commands =
+  python -B -m bandit --ini setup.cfg -qr kojismokydingo/ koji_cli_plugins/
+
+deps =
+  bandit
 
 
 [testenv:flake8]
@@ -150,6 +161,12 @@ exclude_lines =
   pass
   pragma: no cover
   @abstract
+
+
+[bandit]
+# B101 complains about asserts
+
+skips = B101
 
 
 [flake8]
