migrate all the data into setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,6 +37,70 @@ classifiers =
   Topic :: Software Development :: Build Tools
 
 
+[options]
+packages =
+  koji_cli_plugins
+  kojismokydingo
+  kojismokydingo.cli
+  kojismokydingo.sift
+  kojismokydingo.standalone
+
+zip_safe = False
+
+install_requires =
+  appdirs
+  koji
+  enum34 ; python_version < '3.4'
+  typing_extensions ; python_version < '3.8'
+
+tests_require =
+  appdirs
+  docutils
+  koji
+
+
+[options.entry_points]
+koji_smoky_dingo =
+  affected-targets = kojismokydingo.cli.tags:AffectedTargets
+  block-env-var = kojismokydingo.cli.tags:BlockEnvVar
+  block-rpm-macro = kojismokydingo.cli.tags:BlockRPMMacro
+  bulk-move-builds = kojismokydingo.cli.builds:BulkMoveBuilds
+  bulk-tag-builds = kojismokydingo.cli.builds:BulkTagBuilds
+  bulk-untag-builds = kojismokydingo.cli.builds:BulkUntagBuilds
+  check-hosts = kojismokydingo.cli.hosts:CheckHosts
+  check-repo = kojismokydingo.cli.tags:CheckRepo
+  client-config = kojismokydingo.cli.clients:ClientConfig
+  cginfo = kojismokydingo.cli.users:ShowCGInfo
+  filter-builds = kojismokydingo.cli.builds:FilterBuilds
+  filter-tags = kojismokydingo.cli.tags:FilterTags
+  latest-archives = kojismokydingo.cli.archives:LatestArchives
+  list-btypes = kojismokydingo.cli.builds:ListBTypes
+  list-build-archives = kojismokydingo.cli.archives:ListBuildArchives
+  list-cgs = kojismokydingo.cli.builds:ListCGs
+  list-component-builds = kojismokydingo.cli.builds:ListComponents
+  list-env-vars = kojismokydingo.cli.tags:ListEnvVars
+  list-rpm-macros = kojismokydingo.cli.tags:ListRPMMacros
+  list-tag-extras = kojismokydingo.cli.tags:ListTagExtras
+  open = kojismokydingo.cli.clients:ClientOpen
+  perminfo = kojismokydingo.cli.users:ShowPermissionInfo
+  remove-env-var = kojismokydingo.cli.tags:RemoveEnvVar
+  remove-rpm-macro = kojismokydingo.cli.tags:RemoveRPMMacro
+  renum-tag-inheritance = kojismokydingo.cli.tags:RenumTagInheritance
+  set-env-var = kojismokydingo.cli.tags:SetEnvVar
+  set-rpm-macro = kojismokydingo.cli.tags:SetRPMMacro
+  swap-tag-inheritance = kojismokydingo.cli.tags:SwapTagInheritance
+  userinfo = kojismokydingo.cli.users:ShowUserInfo
+
+console_scripts =
+  ksd-filter-builds = kojismokydingo.standalone.builds:ksd_filter_builds
+  ksd-filter-tags = kojismokydingo.standalone.tags:ksd_filter_tags
+
+
+[options.package_data]
+kojismokydingo =
+  py.typed
+
+
 [aliases]
 # nose acts enough like the original test command, but without the
 # extremely obnoxious deprecation warning. And why are they
