force some tox envs to be under 3.9

--- a/setup.cfg
+++ b/setup.cfg
@@ -153,7 +153,7 @@ download = true
 
 [testenv:bandit]
 
-basepython = python
+basepython = python3.9
 
 commands =
   python -B -m bandit --ini setup.cfg -qr kojismokydingo/ koji_cli_plugins/
@@ -164,7 +164,7 @@ deps =
 
 [testenv:flake8]
 
-basepython = python
+basepython = python3.9
 
 commands =
   python -B -m flake8 kojismokydingo/ koji_cli_plugins/
@@ -176,7 +176,7 @@ deps =
 
 [testenv:mypy]
 
-basepython = python
+basepython = python3.9
 
 commands =
   python -B -m mypy kojismokydingo
