pull-container and run-container commands

--- a/setup.cfg
+++ b/setup.cfg
@@ -83,9 +83,11 @@ koji_smoky_dingo =
   list-tag-extras = kojismokydingo.cli.tags:ListTagExtras
   open = kojismokydingo.cli.clients:ClientOpen
   perminfo = kojismokydingo.cli.users:ShowPermissionInfo
+  pull-container = kojismokydingo.cli.builds:PullContainer
   remove-env-var = kojismokydingo.cli.tags:RemoveEnvVar
   remove-rpm-macro = kojismokydingo.cli.tags:RemoveRPMMacro
   renum-tag-inheritance = kojismokydingo.cli.tags:RenumTagInheritance
+  run-container = kojismokydingo.cli.builds:RunContainer
   set-env-var = kojismokydingo.cli.tags:SetEnvVar
   set-rpm-macro = kojismokydingo.cli.tags:SetRPMMacro
   swap-tag-inheritance = kojismokydingo.cli.tags:SwapTagInheritance
