sphinx from tox for deps, remove py2 mention in faq

--- a/setup.cfg
+++ b/setup.cfg
@@ -87,7 +87,6 @@ koji_smoky_dingo =
   remove-env-var = kojismokydingo.cli.tags:RemoveEnvVar
   remove-rpm-macro = kojismokydingo.cli.tags:RemoveRPMMacro
   renum-tag-inheritance = kojismokydingo.cli.tags:RenumTagInheritance
-  run-container = kojismokydingo.cli.builds:RunContainer
   set-env-var = kojismokydingo.cli.tags:SetEnvVar
   set-rpm-macro = kojismokydingo.cli.tags:SetRPMMacro
   swap-tag-inheritance = kojismokydingo.cli.tags:SwapTagInheritance
@@ -201,6 +200,17 @@ commands =
   coverage combine
   coverage report
   coverage html
+
+
+[testenv:sphinx]
+
+basepython = python3.9
+
+commands =
+  python -B setup.py docs
+
+deps =
+  sphinx
 
 
 [nosetests]
