pull-container command (#111)
* pull-container and run-container commands

* docs and docs test

* tweaking option names

* fixing docs

* sphinx from tox for deps, remove py2 mention in faq

* welcome to 2023

* nice docs

* split the configuration sections out for open and pull-container

--- a/setup.cfg
+++ b/setup.cfg
@@ -83,6 +83,7 @@ koji_smoky_dingo =
   list-tag-extras = kojismokydingo.cli.tags:ListTagExtras
   open = kojismokydingo.cli.clients:ClientOpen
   perminfo = kojismokydingo.cli.users:ShowPermissionInfo
+  pull-container = kojismokydingo.cli.builds:PullContainer
   remove-env-var = kojismokydingo.cli.tags:RemoveEnvVar
   remove-rpm-macro = kojismokydingo.cli.tags:RemoveRPMMacro
   renum-tag-inheritance = kojismokydingo.cli.tags:RenumTagInheritance
@@ -120,7 +121,7 @@ version = 2.0
 release = 2.0.0
 
 project = kojismokydingo
-copyright = 2020-2022, Christopher O'Brien
+copyright = 2020-2023, Christopher O'Brien
 
 build-dir = build/sphinx
 builder = dirhtml html
@@ -199,6 +200,17 @@ commands =
   coverage combine
   coverage report
   coverage html
+
+
+[testenv:sphinx]
+
+basepython = python3.9
+
+commands =
+  python -B setup.py docs
+
+deps =
+  sphinx
 
 
 [nosetests]
